minor changes on markdown cells:

--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -490,13 +490,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Genetic algorithm with Manhattan distance and informed mutation\n",
+    "## Genetic algorithm with Manhattan Fitness and informed mutation\n",
     "\n",
-    "Manhattan distance between the points $(x_1,y_1)$ and $(x_2,y_2)$ is defined as follows:\n",
+    "manhattan fitness between the points $(x_1,y_1)$ and $(x_2,y_2)$. We further define the Manhattan Fitness as follows:\n",
     "\n",
-    "$$d_M = |x_1 - x_2| + |y_1 - y_2|. $$\n",
+    "$$d_M = -(|x_1 - x_2| + |y_1 - y_2|) $$\n",
     "\n",
-    "In this context, $x_1$ and $y_1$ will be the coordinates of the last cell of the individual's path, while $x_2$ and $y_2$ will be the coordinates of the target cell."
+    "In this context, $x_1$ and $y_1$ will be the coordinates of the last cell of the individual's path, while $x_2$ and $y_2$ will be the coordinates of the target cell. Please note that we are using the negative manhattan fitness, since we want the fitness score to be nondecreasing with respect to the distance from the target."
    ]
   },
   {
@@ -535,7 +535,7 @@
     }
    ],
    "source": [
-    "### USING THE MANHATTAN DISTANCE AS FITNESS FUNCTION ###\n",
+    "### USING THE MANHATTAN FITNESS AS FITNESS FUNCTION ###\n",
     "\n",
     "# fix rng seed for reproducibility\n",
     "random.seed(42)\n",
@@ -660,17 +660,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Genetic Algorithm with Informed Manhattan distance\n",
+    "## Genetic Algorithm with Informed Manhattan Fitness\n",
     "\n",
-    "In the following cell, we test our algorithm with a slightly more informed fitness. In particular, we add to the Manhattan distance some penalty terms with the aim of discouraging unfavorable elements in the paths: loops, dead-ends, and wrong actions. We basically tried to extend the concept of informed mutation to the fitness function.\n",
+    "In the following cell, we test our algorithm with a slightly more informed fitness. In particular, we add to the Manhattan fitness $d_M$ some penalty terms with the aim of discouraging unfavorable elements in the paths: loops, dead-ends, and wrong actions. We basically tried to extend the concept of informed mutation to the fitness function.\n",
     "\n",
     "This new fitness function $d_I$ is defined as follows:\n",
     "\n",
     "$$d_{I} = d_M - 10 * \\frac{\\sum\\limits_{i=0}^{len-1} (loops_i + dead\\_ends_i + wrong\\_actions_i)}{len}$$\n",
     "\n",
-    "where: $d_M$ is the Manhattan distance, $len$ is the length of the path, and $loops$, $dead\\_ends$, $wrong\\_actions$ are the bitmaps. \n",
+    "where: $d_M$ is the Manhattan fitness, $len$ is the length of the path, and $loops$, $dead\\_ends$, $wrong\\_actions$ are the bitmaps. \n",
     "\n",
-    "Notice that we divided the sum of the errors by the length of the path in order to normalize the error terms, and we multiplied by 10 in order to make the quantity comparable to the Manhattan distance."
+    "Notice that we divided the sum of the errors by the length of the path in order to normalize the error terms, and we multiplied by 10 in order to make the quantity comparable to the Manhattan fitness."
    ]
   },
   {
@@ -726,7 +726,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### USING THE INFORMED MANHATTAN DISTANCE AS FITNESS FUNCTION ### \n",
+    "### USING THE INFORMED MANHATTAN AS FITNESS FUNCTION ### \n",
     "\n",
     "# reset rng\n",
     "random.seed(42)\n",
@@ -874,7 +874,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again, our agent is able to reach the goal. However, we can see that the performances are similar to the ones obtained with the simple Manhattan distance. In fact, we are not able to reach the goal in fewer generations, nor to significantly reduce the number of errors."
+    "Again, our agent is able to reach the goal. However, we can see that the performances are similar to the ones obtained with the simple manhattan fitness. In fact, we are not able to reach the goal in fewer generations, nor to significantly reduce the number of errors."
    ]
   },
   {
@@ -946,9 +946,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Genetic Algorithm with Dynamic Manhattan distance\n",
+    "## Genetic Algorithm with Dynamic Manhattan fitness\n",
     "\n",
-    "Unsatisfied with the performance of the Informed Manhattan distance, we decided to define a case-specific fitness function. In particular, we decided to implement the fitness so that it is the Manhattan distance $d_M$ as long as the agent is still searching for the target, after that it is the number of errors made $e$. \n",
+    "Unsatisfied with the performance of the Informed Manhattan fitness, we decided to define a case-specific fitness function. In particular, we decided to implement the fitness so that it is the Manhattan fitness $d_M$ as long as the agent is still searching for the target, after that it is the number of errors made $e$. \n",
     "\n",
     "The formula for the new fitness function is:\n",
     "\n",
@@ -958,7 +958,7 @@
     "   \\end{cases}\n",
     "$$\n",
     "\n",
-    "where we added a penalty of $k$ to the Manhattan distance in order to keep the overall fitness function non-decreasing. We have empirically found that $k=300$ is a good penalty value."
+    "where we added a penalty of $k$ to the Manhattan fitness in order to keep the overall fitness function non-decreasing. We have empirically found that $k=300$ is a good penalty value."
    ]
   },
   {
@@ -1200,7 +1200,7 @@
     "python run_experiments.py --experiments 100 --individuals 8 --max_generations 1000 --workers 8 --fitness 2\n",
     "```\n",
     "\n",
-    "where the fitness parameter can be 0, 1 or 2, which respectively stand for the Manhattan distance, the Informed Manhattan, and the Dynamic Manhattan. \n",
+    "where the fitness parameter can be 0, 1 or 2, which respectively stand for the Manhattan fitness, the Informed Manhattan, and the Dynamic Manhattan. \n",
     "\n",
     "It is also possible to specify a DES file containing the map to be used (with the `--map` argument). For our experiments, we used the `real_maze.des` file which is exactly the map plotted at the very beginning of this notebook.\n",
     "\n",
@@ -1224,9 +1224,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Standard Manhattan distance\n",
+    "### Standard manhattan fitness\n",
     "\n",
-    "First, we present the results of the experiments with the Manhattan distance. We can observe that the best fitness is 0, meaning that the target was reached in all the experiments."
+    "First, we present the results of the experiments with the Manhattan fitness $d_M$. We can observe that the best fitness is 0, meaning that the target was reached in all the experiments."
    ]
   },
   {
@@ -1455,11 +1455,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Starting from the simplest setting, e.g. Manhattan distance with 8 individuals per generation, we can observe that our model produces a win rate of 100%, meaning that each individual is able to reach the target (i.e. each individual reaches a fitness of 0). \n",
+    "Starting from the simplest setting, e.g. Manhattan fitness with 8 individuals per generation, we can observe that our model produces a win rate of 100%, meaning that each individual is able to reach the target (i.e. each individual reaches a fitness of 0). \n",
     "\n",
     "As expected, increasing the number of individuals per generation reduced the number of generation needed to reach the target, as well as the standard deviation.\n",
     "\n",
-    "The following table reports the results for the experiments with the Manhattan distance. The above charts show the distribution of the first winning generation with different number of individuals per generation.\n",
+    "The following table reports the results for the experiments with the Manhattan fitness. The above charts show the distribution of the first winning generation with different number of individuals per generation.\n",
     "\n",
     "| Individuals | Win rate | Generations \n",
     "|-------------|----------|-------------\n",
@@ -1505,7 +1505,7 @@
     "plt.fill_between(range(len(mean_32)), mean_32-std_32, mean_32+std_32, alpha=0.3)\n",
     "plt.xlabel('Generation')\n",
     "plt.ylabel('Fitness')\n",
-    "plt.title('Simple Manhattan Distance')\n",
+    "plt.title('Simple manhattan fitness')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -1521,9 +1521,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Informed Manhattan distance\n",
+    "### Informed Manhattan Fitness\n",
     "\n",
-    "Here, we present results for the experiments with the Informed Manhattan distance, defined above in this notebook.\n"
+    "Here, we present results for the experiments with the Informed Manhattan fitness, defined above in this notebook.\n"
    ]
   },
   {
@@ -1651,7 +1651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again, we observe a similar behaviour to the one observed with the standard Manhattan distance. In particular, we can observe that the win rate is again 100% for all the experiments, meaning that each individual is able to reach the target. Unfortunately, we can observe that the number of generations needed to reach the target is higher than before. This is probably due to the fact that the Informed Manhattan distance is not able to reduce the number of errors made by the agent in a significant way. Variance is also slightly higher than the one observed with the classic Manhattan distance.\n",
+    "Again, we observe a similar behaviour to the one observed with the standard manhattan fitness. In particular, we can observe that the win rate is again 100% for all the experiments, meaning that each individual is able to reach the target. Unfortunately, we can observe that the number of generations needed to reach the target is higher than before. This is probably due to the fact that the Informed manhattan fitness is not able to reduce the number of errors made by the agent in a significant way. Variance is also slightly higher than the one observed with the classic manhattan fitness.\n",
     "\n",
     "| Individuals | Win rate | Generations\n",
     "|-------------|----------|-------------\n",
@@ -1706,7 +1706,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although results are comparable to the ones with Manhattan distance, we can see how certain individuals are able to reduce the number of errors across generations. This number increases as the number of individuals per generation increases."
+    "Although results are comparable to the ones with manhattan fitness, we can see how certain individuals are able to reduce the number of errors across generations. This number increases as the number of individuals per generation increases."
    ]
   },
   {
@@ -1745,7 +1745,7 @@
     "plt.fill_between(range(len(mean_32)), mean_32-std_32, mean_32+std_32, alpha=0.3)\n",
     "plt.xlabel('Generation')\n",
     "plt.ylabel('Fitness')\n",
-    "plt.title('Informed Manhattan Distance')\n",
+    "plt.title('Informed manhattan fitness')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -1754,7 +1754,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we can notice that the convergence rate is quite slower than for the Manhattan distance, and the variance is higher even in the last generations."
+    "Here we can notice that the convergence rate is quite slower than for the manhattan fitness, and the variance is higher even in the last generations."
    ]
   },
   {
@@ -1891,7 +1891,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consinstently with preceeding results, the number of generations necessary to win decreases as the number of individuals per generation increases. In fact, until the target is not reached we are in the case of the Manhattan distance.\n",
+    "Consinstently with preceeding results, the number of generations necessary to win decreases as the number of individuals per generation increases. In fact, until the target is not reached we are in the case of the manhattan fitness.\n",
     "\n",
     "| Individuals | Win rate | Generations\n",
     "|-------------|----------|-------------\n",
@@ -1994,9 +1994,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These plots show how the fitness changes with respect to the generations. Clearly, with this new fitness, all the agents are able to improve their number of errors after the target is found. However, we can observe that the variance is quite high, and the convergence rate is notably slower than the one obtained with the standard Manhattan distance: in fact, achieving this goal (0 error, 0 fitness value) is much harder than reaching the target with a complex maze and in an highly stochastic setting as the one imposed by a genetic search, despite of the informed mutations we defined.\n",
+    "These plots show how the fitness changes with respect to the generations. Clearly, with this new fitness, all the agents are able to improve their number of errors after the target is found. However, we can observe that the variance is quite high, and the convergence rate is notably slower than the one obtained with the standard Manhattan fitness: in fact, achieving this goal (0 error, 0 fitness value) is much harder than reaching the target with a complex maze and in an highly stochastic setting as the one imposed by a genetic search, despite of the informed mutations we defined.\n",
     "\n",
-    "In conclusion, if we aspire to improve the quality of winning paths, our approach seems to promise good results in this regard. However, if the objective is limited to solving the maze, then opting for the Manhattan distance as fitness remains the best choice, coupled with the other components of the genetic algorithm."
+    "In conclusion, if we aspire to improve the quality of winning paths, our approach seems to promise good results in this regard. However, if the objective is limited to solving the maze, then opting for the manhattan fitness as fitness remains the best choice, coupled with the other components of the genetic algorithm."
    ]
   },
   {
