fix typo in fitness formulation

--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -618,7 +618,7 @@
     "\n",
     "This new fitness function $d_I$ is defined as follows:\n",
     "\n",
-    "$$d_{I} = d_M - 10 * \\frac{\\sum\\limits_{i=0}^{len-1} (loops_i + dead\\_ends_i + wrong\\_actions_i)}{len}$$\n",
+    "$$d_{I} = d_M - 10 * \\frac{\\sum\\limits_{i=1}^{len} (loops_i + dead\\_ends_i + wrong\\_actions_i)}{len}$$\n",
     "\n",
     "where: $d_M$ is the Manhattan fitness, $len$ is the length of the path, and $loops$, $dead\\_ends$, $wrong\\_actions$ are the bitmaps. \n",
     "\n",
@@ -753,7 +753,7 @@
     "\n",
     "$$ d_{D} = \\begin{cases} \n",
     "      d_M - k & \\text{if }  d_M \\not= 0  \\\\\n",
-    "      -\\sum\\limits_{i=0}^{len}loops_i + dead\\_ends_i + wrong\\_actions_i & \\text{if } d_M = 0\n",
+    "      -\\sum\\limits_{i=1}^{len}loops_i + dead\\_ends_i + wrong\\_actions_i & \\text{if } d_M = 0\n",
     "   \\end{cases}\n",
     "$$\n",
     "\n",
